[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goanki"
version = "0.1.0"
description = "CLI toolkit for automating Anki deck preparation and translations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "PGY" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "PyYAML>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "responses>=0.25",
